--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -28,9 +28,22 @@
 		<filter-name>osivFilter</filter-name>
 		<filter-class>org.springframework.orm.hibernate3.support.OpenSessionInViewFilter</filter-class>
 	</filter>
+	<!--@分隔-->
 	<filter>
 		<filter-name>XssFilter</filter-name>
 		<filter-class>com.jeecms.common.web.XssFilter</filter-class>
+    	<init-param>
+			<param-name>SplitChar</param-name>
+			<param-value>@</param-value>
+    	</init-param>
+    	<init-param>
+			<param-name>FilterChar</param-name>
+			<param-value>'@"@\@#@:@%@></param-value>
+    	</init-param>
+		<init-param>
+			<param-name>ReplaceChar</param-name>
+			<param-value>\'@\"@＼@＃@：@\\%@＞</param-value>
+    	</init-param>
 	</filter>
 	<filter-mapping>
 		<filter-name>processTime</filter-name>
@@ -98,11 +111,7 @@
 	</filter-mapping>
 	<filter-mapping>
 		<filter-name>XssFilter</filter-name>
-		<url-pattern>/member/*</url-pattern>
-	</filter-mapping>
-	<filter-mapping>
-		<filter-name>XssFilter</filter-name>
-		<url-pattern>/login.jspx</url-pattern>
+		<url-pattern>*.jspx</url-pattern>
 	</filter-mapping>
 	<servlet>
 		<servlet-name>JeeCmsAdmin</servlet-name>
